# xyz

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
docs/: API.md  ARCHITECTURE.md  DEPLOYMENT.md  PERFORMANCE.md  SETUP.md  TROUBLESHOOTING.md  brainstorm.md  gui-design.md  quick-reference.md  reference-patterns.md  summary.md  worklog.md
src/: app.rs  main.rs
src/managers/: cargo.rs  detector.rs  homebrew.rs  homebrew_fast.rs  mod.rs  npm.rs  pip.rs
src/models/: mod.rs  package.rs  project.rs  usage.rs
src/scanner/: mod.rs  project_scanner.rs
src/ui/: dashboard.rs  mod.rs
src/utils/: cache.rs  command.rs  format.rs  http_client.rs  mod.rs
