[package]
name = "depmgr"
version = "0.1.0"
edition = "2021"

[dependencies]
# GUI Framework
eframe = "0.33"
egui = "0.33"
egui_extras = "0.33"

# Async Runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"

# HTTP Client (for fast API requests)
reqwest = { version = "0.12", features = ["json", "gzip"] }

# Parallel Processing
rayon = "1.10"

# Fast Caching
dashmap = "6.1"

# Error Handling
anyhow = "1"
thiserror = "1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# File Operations
walkdir = "2"
glob = "0.3"

# Utilities
regex = "1"
chrono = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
